fixed top margin content spacing

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -41,7 +41,7 @@
 }
 
 .about {
-  margin-top: 10%;
+  margin-top: 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
